# -INT6012-VietnameseDependencyParsing

./: .gitignore  README.md  dep_parsing_mlp.ipynb  pyproject.toml
configs/: config.yaml
corpus/: conll_corpus.py  corpus.py
data/: __init__.py  loader.py
data_processing/: analyzer.py  dependency.py  vocabulary.py
datasets/: __init__.py
evaluation/: __init__.py  evaluator.py  metrics.py
models/: __init__.py  baselines.py  parser_factory.py
models/attention/: __init__.py  base_attention.py  biaffine_attention.py
models/biaffine/: dependency_parser.py  dependency_parser_underthesea.py
models/embedding/: base_embedding.py
models/graph_based/: __init__.py  biaffine_parser.py  (+4 more)
modules/: base.py  bert.py  nn.py
reports/: data_analysis.md
scripts/: analyze_data.py  cli.py  demo.py  train.py  train_traditional.py  trainer.ipynb  visualization.py
templates/: demo.html  visualization.html
trainers/: ablation_trainer.py  base_trainer.py  biaffine_trainer.py  biaffine_trainer_v2.py  biaffine_trainer_v3.py  bilstm_trainer.py  dependency_parser_trainer.py  jointtagger_real_trainer.py  jointtagger_trainer.py  malt_trainer.py  neural_trainer.py  tmp_trainer.py  traditional_trainer.py  train_config.py  trainer_factory.py  transition_trainer.py  triaffine_full_trainer.py  triaffine_nobert_trainer.py  triaffine_trainer.py
training/: __init__.py  train_config.py  trainer.py  trainer_factory.py  transition_trainer.py
transforms/: conll.py
utils/: constants.py  file_utils.py  logs.py  sp_alg.py  sp_data.py  sp_embedding.py  sp_field.py  sp_fn.py  sp_metric.py
(+42 files in other folders)
